{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 103,
  "lineage": "e0a940b4-6c69-049d-15cb-04642e009146",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-test-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0025cead08302a9d5",
            "arn": "arn:aws:ec2:us-west-1:921007484764:instance/i-0c69091251a2e0802",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c69091251a2e0802",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rajdeep_aws_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091815e64b5fe74b5",
            "private_dns": "ip-10-0-2-131.us-west-1.compute.internal",
            "private_ip": "10.0.2.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b5bbf70dc328066c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00609d5e2d5d1eeae",
            "tags": {
              "Name": "test-ec2-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04d23b3b4c83e7827"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.production",
            "module.vpc.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ecs-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:921007484764:listener/app/production-alb/2f06919d4a288007/56aa7033b56f8019",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:921007484764:targetgroup/production-tg/53d1f2ba17c3d9e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:921007484764:listener/app/production-alb/2f06919d4a288007/56aa7033b56f8019",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:921007484764:loadbalancer/app/production-alb/2f06919d4a288007",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.load_balancers.aws_alb_target_group.default-target-group",
            "module.load_balancers.aws_lb.production",
            "module.security_groups.aws_security_group.load-balancer",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:921007484764:targetgroup/production-tg/53d1f2ba17c3d9e7",
            "arn_suffix": "targetgroup/production-tg/53d1f2ba17c3d9e7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:921007484764:targetgroup/production-tg/53d1f2ba17c3d9e7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "production-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:921007484764:loadbalancer/app/production-alb/2f06919d4a288007",
            "arn_suffix": "app/production-alb/2f06919d4a288007",
            "dns_name": "production-alb-2057313350.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:921007484764:loadbalancer/app/production-alb/2f06919d4a288007",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-alb",
            "security_groups": [
              "sg-097da59aa99228e1c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00609d5e2d5d1eeae"
              },
              {
                "subnet_id": "subnet-0d14505567de1e63d"
              }
            ],
            "subnets": [
              "subnet-00609d5e2d5d1eeae",
              "subnet-0d14505567de1e63d"
            ],
            "vpc_id": "vpc-06cd21ff020959d70",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.load-balancer",
            "module.vpc.aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921007484764:security-group/sg-002f959e7652de052",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002f959e7652de052",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-097da59aa99228e1c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs_security_group",
            "name_prefix": "",
            "owner_id": "921007484764",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.load-balancer",
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921007484764:security-group/sg-097da59aa99228e1c",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097da59aa99228e1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "921007484764",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.5",
            "association_id": "eipassoc-0ef3d669f80f891ea",
            "domain": "vpc",
            "id": "eipalloc-0361ffa34fa1fc2a3",
            "network_interface": "eni-0dc98b7c6a5200078",
            "private_dns": "ip-10-0-1-42.us-west-1.compute.internal",
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-54-177-59-60.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.59.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.production-igw",
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "production-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921007484764:internet-gateway/igw-0d80209c5f4c056e7",
            "id": "igw-0d80209c5f4c056e7",
            "owner_id": "921007484764",
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0361ffa34fa1fc2a3",
            "id": "nat-00931714690bba5c9",
            "network_interface_id": "eni-0dc98b7c6a5200078",
            "private_ip": "10.0.1.42",
            "public_ip": "54.177.59.60",
            "subnet_id": "subnet-0d14505567de1e63d"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic-ip-for-nat-gw",
            "module.vpc.aws_internet_gateway.production-igw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e38e7d52397819961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00931714690bba5c9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e38e7d5239781996",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic-ip-for-nat-gw",
            "module.vpc.aws_internet_gateway.production-igw",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d80209c5f4c056e7",
            "id": "r-rtb-052ace674738750a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052ace674738750a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.production-igw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e38e7d5239781996",
            "owner_id": "921007484764",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00931714690bba5c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-052ace674738750a1",
            "owner_id": "921007484764",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d80209c5f4c056e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fccf7574fd369d2",
            "route_table_id": "rtb-0e38e7d5239781996",
            "subnet_id": "subnet-00e10cea766e1640d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_vpc.production-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f050714173b1413",
            "route_table_id": "rtb-0e38e7d5239781996",
            "subnet_id": "subnet-0481c2b522fd1f32e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-subnet",
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc7e3372f339b928",
            "route_table_id": "rtb-052ace674738750a1",
            "subnet_id": "subnet-0d14505567de1e63d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.production-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f402320423211325",
            "route_table_id": "rtb-052ace674738750a1",
            "subnet_id": "subnet-00609d5e2d5d1eeae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921007484764:subnet/subnet-00e10cea766e1640d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-00e10cea766e1640d",
            "map_public_ip_on_launch": false,
            "owner_id": "921007484764",
            "tags": {
              "Name": "private0"
            },
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921007484764:subnet/subnet-0481c2b522fd1f32e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0481c2b522fd1f32e",
            "map_public_ip_on_launch": false,
            "owner_id": "921007484764",
            "tags": {
              "Name": "private1"
            },
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921007484764:subnet/subnet-0d14505567de1e63d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d14505567de1e63d",
            "map_public_ip_on_launch": false,
            "owner_id": "921007484764",
            "tags": {
              "Name": "public0"
            },
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921007484764:subnet/subnet-00609d5e2d5d1eeae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00609d5e2d5d1eeae",
            "map_public_ip_on_launch": false,
            "owner_id": "921007484764",
            "tags": {
              "Name": "public1"
            },
            "vpc_id": "vpc-06cd21ff020959d70"
          },
          "dependencies": [
            "module.vpc.aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921007484764:vpc/vpc-06cd21ff020959d70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3a0ff1fd7542f8c",
            "default_route_table_id": "rtb-0bc657c30f73c4750",
            "default_security_group_id": "sg-04d23b3b4c83e7827",
            "dhcp_options_id": "dopt-5911e63f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06cd21ff020959d70",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bc657c30f73c4750",
            "owner_id": "921007484764",
            "tags": {
              "Name": "rajdeep_vpc"
            }
          }
        }
      ]
    }
  ]
}